RESOLVED FIXED28732
r47744 causes media/video-controls-with-mutation-event-handler.html to crash
https://bugs.webkit.org/show_bug.cgi?id=28732
Summary r47744 causes media/video-controls-with-mutation-event-handler.html to crash
Eric Carlson
Reported 2009-08-25 22:08:00 PDT
https://bugs.webkit.org/show_bug.cgi?id=28241 caused media/video-controls-with-mutation-event-handler.html to begin crashing on Windows, eg. http://build.webkit.org/results/Windows%20Release%20(Tests)/r47770%20(3743)/results.html. The crash happens when the MediaControlVolumeSliderElement constructor calls setAttribute() in a page with registered mutation event listeners. setAttribute() causes a synchronous event to be fired immediately and the event destructor derefs the event target (the MediaControlVolumeSliderElement) so the element is destroyed before the constructor returns.
Attachments
proposed patch (2.08 KB, patch)
2009-08-25 22:43 PDT, Eric Carlson
mitz: review+
Eric Carlson
Comment 1 2009-08-25 22:43:05 PDT
Created attachment 38598 [details] proposed patch
Eric Carlson
Comment 2 2009-08-25 22:50:29 PDT
Note You need to log in before you can comment on or make changes to this bug.